sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: Double.type does not take parameters
  var ecart = Double(getValueCount())
                    ^